--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body {
 /* SECTION */
 .section {
   padding: 22px 16px;
-  border-top: 1px solid #1e1e1e;
+  border-top: 1px solid #5C5C5C;
 }
 
 /* DIORAMA TITLE */
@@ -44,7 +44,7 @@ body {
   display: flex;
   gap: 12px;
   overflow-x: auto;
-  padding: 4px 2px 10px;
+  padding: 6px 6px 6px 6px;
   scroll-snap-type: x mandatory;
 }
 
@@ -53,7 +53,7 @@ body {
 }
 
 .slider img {
-  width: 260px;
+  width: 240px;
   aspect-ratio: 1 / 1;
   object-fit: cover;
   border-radius: 12px;
@@ -107,7 +107,7 @@ footer {
   font-size: 12px;
   color: #A6ABB0;
   padding: 22px 16px;
-  border-top: 1px solid #1e1e1e;
+  border-top: 1px solid #5C5C5C;
 }
 
 /* FLOATING WA */
@@ -206,7 +206,7 @@ footer {
 .footer-grid h4 {
   color: #fff;
   font-size: 14px;
-  margin-bottom: 8px;
+  margin-bottom: 20px;
 }
 
 .footer-grid p {
@@ -344,13 +344,6 @@ Built with premium materials, realistic details, and precise scale accuracy.
 </div>
 
 
-<footer>
-Connect with us on Instagram <b>@diecast.scape</b><br><br>
-© 2026 Diecast.scape — Handcrafted Scale Dioramas<br>
-All brand names belong to their respective owners.<br><br>
-Thank you for visiting 
-</footer>
-
 <a class="wa-float"
 href="https://wa.me/917348913798?text=Hi%20I%20need%20help%20regarding%20Diecast.scape%20dioramas."
 target="_blank">
@@ -383,7 +376,9 @@ target="_blank">
   </div>
 
   <div class="footer-copy">
-    © 2026 Diecast.scape — All rights reserved
+    © 2026 Diecast.scape — Handcrafted Scale Dioramas<br>
+All brand names belong to their respective owners.<br><br>
+Thank you for visiting 
   </div>
 </footer>
 
