--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body {
 /* SECTION */
 .section {
   padding: 22px 16px;
-  border-top: 1px solid #5C5C5C;
+  border-top: 1px solid #1e1e1e;
 }
 
 /* DIORAMA TITLE */
@@ -40,29 +40,20 @@ body {
   margin-bottom: 10px;
 }
 
-.slider {
-  scrollbar-width: none;       /* Firefox */
-}
-.slider::-webkit-scrollbar {
-  display: none;               /* Chrome */
-}
-
-}
+/* IMAGE SWIPE */
 .slider {
   display: flex;
-  gap: 12px;
+  gap: 10px;
   overflow-x: auto;
   scroll-snap-type: x mandatory;
-  padding: 0 16px;       
 }
 
 .slider img {
-  width: 85%;
-  max-width: 260px;
+  width: 260px;
   aspect-ratio: 1 / 1;
   object-fit: cover;
   border-radius: 12px;
-  scroll-snap-align: center;  /* ✅ better centering */
+  scroll-snap-align: start;
   background: #000;
 }
 
@@ -112,7 +103,7 @@ footer {
   font-size: 12px;
   color: #A6ABB0;
   padding: 22px 16px;
-  border-top: 1px solid #5C5C5C;
+  border-top: 1px solid #1e1e1e;
 }
 
 /* FLOATING WA */
@@ -209,12 +200,14 @@ footer {
 }
 
 .footer-grid h4 {
+  text-align: center;
   color: #fff;
   font-size: 14px;
-  margin-bottom: 20px;
+  margin-bottom: 8px;
 }
 
 .footer-grid p {
+  text-align: center;
   font-size: 13px;
   margin: 6px 0;
 }
@@ -278,8 +271,6 @@ window.addEventListener("popstate", function () {
 <div class="description">
 Handcrafted dioramas designed to elevate your diecast collection.
 Built with premium materials, realistic details, and precise scale accuracy.
-
-</div>
   
 <input
   type="text"
@@ -348,7 +339,6 @@ Built with premium materials, realistic details, and precise scale accuracy.
   </a>
 </div>
 
-
 <a class="wa-float"
 href="https://wa.me/917348913798?text=Hi%20I%20need%20help%20regarding%20Diecast.scape%20dioramas."
 target="_blank">
@@ -369,9 +359,7 @@ target="_blank">
       <p>Shipping Policy</p>
       <p>Return & Cancellation</p>
       <p>Terms of Service</p>
-    </div>
-
-    <div>
+  <br><br>
       <h4>INFORMATION</h4>
       <p>About Us</p>
       <p>Contact Us</p>
@@ -381,7 +369,7 @@ target="_blank">
   </div>
 
   <div class="footer-copy">
-    © 2026 Diecast.scape — Handcrafted Scale Dioramas<br>
+    © 2026 Diecast.scape —  Handcrafted Scale Dioramas<br>
 All brand names belong to their respective owners.<br><br>
 Thank you for visiting 
   </div>
