--- a/index.html
+++ b/index.html
@@ -193,9 +193,7 @@ footer {
 }
 
 .footer-grid {
-  display: flex;
-  justify-content: space-between;
-  gap: 20px;
+  text-align: center;
   flex-wrap: wrap;
 }
 
