--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@ body {
   color: #aaa;
 }
 
-/* BUTTON */
 .buy-btn {
   margin-top: 18px;
   display: inline-block;
@@ -95,15 +94,6 @@ body {
   border-radius: 8px;
   text-decoration: none;
   font-weight: 600;
-}
-
-/* FOOTER */
-footer {
-  text-align: center;
-  font-size: 12px;
-  color: #A6ABB0;
-  padding: 22px 16px;
-  border-top: 1px solid #1e1e1e;
 }
 
 /* FLOATING WA */
@@ -193,9 +183,13 @@ footer {
 }
 
 .footer-grid {
+  display: flex;
+  flex-direction: column;  
+  align-items: center;      
+  gap: 25px;
   text-align: center;
-  flex-wrap: wrap;
 }
+
 
 .footer-grid h4 {
   text-align: center;
@@ -277,6 +271,7 @@ Built with premium materials, realistic details, and precise scale accuracy.
   onkeyup="searchProducts()"
   style="
     width: calc(100% - 32px);
+    max-width: 1100px;
     margin: 10px 16px 20px;
     padding: 12px;
     border-radius: 10px;
@@ -357,7 +352,8 @@ target="_blank">
       <p>Shipping Policy</p>
       <p>Return & Cancellation</p>
       <p>Terms of Service</p>
-  <br><br>
+    </div>
+    <div>
       <h4>INFORMATION</h4>
       <p>About Us</p>
       <p>Contact Us</p>
