--- a/index.html
+++ b/index.html
@@ -13,6 +13,32 @@ body {
   color: #fff;
 }
 
+  .top-header {
+  display: flex;
+  align-items: center;
+  padding: 12px 16px;
+  position: relative;
+}
+
+.logo {
+  width: 90px;
+  height: 90px;
+  object-fit: contain;
+}
+
+.brand-center {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+}
+
+.brand-name {
+  font-size: 24px;
+  font-weight: 800;
+  letter-spacing: 1px;
+}
+
 .subtitle {
   text-align: center;
   font-size: 13px;
@@ -28,20 +54,30 @@ body {
   line-height: 1.5;
 }
 
-/* SECTION */
+  .search-bar {
+  width: 100%;
+  max-width: 1100px;
+  display: block;
+  margin: 10px auto 20px; /* auto centers it */
+  padding: 12px 14px;
+  border-radius: 10px;
+  border: none;
+  font-size: 14px;
+  outline: none;
+  box-sizing: border-box;
+}
+
 .section {
   text-align: left;
   padding: 22px 16px;
   border-top: 1px solid #1e1e1e;
 }
 
-/* DIORAMA TITLE */
 .diorama-title {
   font-size: 18px;
   margin-bottom: 10px;
 }
 
-/* IMAGE SWIPE */
 .slider {
   display: flex;
   gap: 10px;
@@ -58,7 +94,6 @@ body {
   background: #000;
 }
 
-/* PRICE */
 .price {
   margin-top: 14px;
 }
@@ -97,7 +132,6 @@ body {
   font-weight: 600;
 }
 
-/* FLOATING WA */
 .wa-float {
   position: fixed;
   bottom: 55px;
@@ -118,7 +152,6 @@ body {
   height: 28px;
 }
 
-  /* FULL IMAGE OVERLAY */
 #lightbox {
   position: fixed;
   top: 0;
@@ -136,32 +169,6 @@ body {
   max-width: 95%;
   max-height: 95%;
   border-radius: 12px;
-}
-.top-header {
-  display: flex;
-  align-items: center;
-  padding: 12px 16px;
-  position: relative;
-}
-
-.logo {
-  width: 90px;
-  height: 90px;
-  object-fit: contain;
-}
-
-/* CENTER BRAND NAME */
-.brand-center {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  text-align: center;
-}
-
-.brand-name {
-  font-size: 24px;
-  font-weight: 800;
-  letter-spacing: 1px;
 }
 
   .site-footer {
@@ -267,16 +274,7 @@ Built with premium materials, realistic details, and precise scale accuracy.
   id="searchInput"
   placeholder="Search dioramas..."
   onkeyup="searchProducts()"
-  style="
-    width: calc(100% - 32px);
-    max-width: 1100px;
-    margin: 10px 16px 20px;
-    padding: 12px;
-    border-radius: 10px;
-    border: none;
-    font-size: 14px;
-    outline: none;
-  ">
+  class="search-bar">
 
   <!-- PRODUCT 1 -->
 <div class="section">
