--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ body {
 }
 
 .brand-name {
-  font-size: 24px;
+  font-size: 26px;
   font-weight: 800;
   letter-spacing: 1px;
 }
@@ -55,8 +55,8 @@ body {
 }
 
   .search-bar {
-  width: 100%;
-  max-width: 1100px;
+  width: 80%;
+  max-width: 1000px;
   display: block;
   margin: 10px auto 20px; /* auto centers it */
   padding: 12px 14px;
@@ -70,11 +70,12 @@ body {
 .section {
   text-align: left;
   padding: 22px 16px;
-  border-top: 1px solid #1e1e1e;
+  border-top: 1px solid #999;
 }
 
 .diorama-title {
   font-size: 18px;
+  color: #fff;
   margin-bottom: 10px;
 }
 
@@ -86,7 +87,7 @@ body {
 }
 
 .slider img {
-  width: 260px;
+  width: 240px;
   aspect-ratio: 1 / 1;
   object-fit: cover;
   border-radius: 12px;
@@ -99,13 +100,13 @@ body {
 }
 
 .old {
-  color: #777;
+  color: #A73F35;
   text-decoration: line-through;
   margin-right: 6px;
 }
 
 .new {
-  color: #DBDBDB;
+  color: #E8ECEE;
   font-size: 20px;
   font-weight: bold;
 }
@@ -173,7 +174,7 @@ body {
 
   .site-footer {
   background: #0B132B;
-  border-top: 1px solid #1e1e1e;
+  border-top: 1px solid #999;
   padding: 30px 16px;
   color: #A6ABB0;
 }
@@ -200,18 +201,18 @@ body {
 
 .footer-grid h4 {
   color: #fff;
-  font-size: 14px;
+  font-size: 28px;
   margin-bottom: 8px;
 }
 
 .footer-grid p {
-  font-size: 13px;
+  font-size: 25px;
   margin: 6px 0;
 }
 
 .footer-copy {
   text-align: center;
-  font-size: 12px;
+  font-size: 14px;
   margin-top: 25px;
   color: #777;
 }
@@ -359,7 +360,7 @@ target="_blank">
   </div>
 
   <div class="footer-copy">
-    © 2026 Diecast.scape —  Handcrafted Scale Dioramas<br>
+    © 2026 Diecast.scape —  Handcrafted Dioramas<br>
 All brand names belong to their respective owners.<br><br>
 Thank you for visiting 
   </div>
