--- a/index.html
+++ b/index.html
@@ -34,31 +34,31 @@ body {
 }
 
 .brand-name {
-  font-size: 26px;
+  font-size: 22px;
   font-weight: 800;
   letter-spacing: 1px;
+  margin-bottom: 8px;
 }
 
 .subtitle {
   text-align: center;
-  font-size: 13px;
+  font-size: 14px;
   color: #E8ECEE;
-  margin-top: 2px;
 }
 
 .description {
   text-align: center;
-  font-size: 14px;
+  font-size: 15px;
   color: #CBCCCD;
   padding: 10px 18px 20px;
   line-height: 1.5;
 }
 
   .search-bar {
-  width: 80%;
+  width: 100%;
   max-width: 1000px;
   display: block;
-  margin: 10px auto 20px; /* auto centers it */
+  margin: 10px auto 20px;
   padding: 12px 14px;
   border-radius: 10px;
   border: none;
@@ -87,7 +87,7 @@ body {
 }
 
 .slider img {
-  width: 240px;
+  width: 250px;
   aspect-ratio: 1 / 1;
   object-fit: cover;
   border-radius: 12px;
@@ -201,12 +201,12 @@ body {
 
 .footer-grid h4 {
   color: #fff;
-  font-size: 28px;
+  font-size: 17px;
   margin-bottom: 8px;
 }
 
 .footer-grid p {
-  font-size: 25px;
+  font-size: 15px;
   margin: 6px 0;
 }
 
@@ -297,7 +297,7 @@ Built with premium materials, realistic details, and precise scale accuracy.
   <div class="ship">+ Shipping charges applicable</div>
 
   <a class="buy-btn"
-     href="https://wa.me/917348913798?text=Hi%20Diecast.scape%2C%0AI%20want%20to%20order%3A%20NISSAN%20Handcrafted%20Diorama"
+     href="https://wa.me/918792744018?text=Hi%20Diecast.scape%2C%0AI%20would%20like%20to%20place%20an%20order%20for%20the%20Nissan%20Handcrafted%20Diorama%2C%20priced%20at%20%E2%82%B9849%20(29%25%20discount).%0AKindly%20let%20me%20know%20the%20delivery%20options%20and%20payment%20details."
      target="_blank">
      Order on WhatsApp
   </a>
@@ -323,14 +323,39 @@ Built with premium materials, realistic details, and precise scale accuracy.
   <div class="ship">+ Shipping charges applicable</div>
 
   <a class="buy-btn"
-     href="https://wa.me/917348913798?text=Hi%20Diecast.scape%2C%0AI%20want%20to%20order%3A%20BMW%20Handcrafted%20Diorama"
+     href="https://wa.me/918792744018?text=Hi%20Diecast.scape%2C%0AI%20would%20like%20to%20place%20an%20order%20for%20the%20BMW%20Handcrafted%20Diorama%2C%20priced%20at%20%E2%82%B9849%20(29%25%20discount).%0AKindly%20let%20me%20know%20the%20delivery%20options%20and%20payment%20details."
      target="_blank">
      Order on WhatsApp
   </a>
 </div>
 
+  <div class="section">
+  <div class="diorama-title">BMW Handcrafted Diorama</div>
+
+  <div class="slider">
+    <img src="image1.jpg" onclick="openLightbox(this.src)">
+    <img src="image2.jpg" onclick="openLightbox(this.src)">
+    <img src="image3.jpg" onclick="openLightbox(this.src)">
+    <img src="image4.jpg" onclick="openLightbox(this.src)">
+  </div>
+
+  <div class="price">
+    <span class="old">₹1199</span>
+    <span class="new">₹849</span>
+  </div>
+
+  <div class="discount">29% OFF · Save ₹350</div>
+  <div class="ship">+ Shipping charges applicable</div>
+
+  <a class="buy-btn"
+     href="https://wa.me/918792744018?text=Hi%20Diecast.scape%2C%0AI%20would%20like%20to%20place%20an%20order%20for%20the%20BMW%20Handcrafted%20Diorama%2C%20priced%20at%20%E2%82%B9849%20(29%25%20discount).%0AKindly%20let%20me%20know%20the%20delivery%20options%20and%20payment%20details."
+     target="_blank">
+     Order on WhatsApp
+  </a>
+  </div>
+
 <a class="wa-float"
-href="https://wa.me/917348913798?text=Hi%20I%20need%20help%20regarding%20Diecast.scape%20dioramas."
+href="https://wa.me/918792744018?text=Hi%20I%20need%20help%20regarding%20Diecast.scape%20dioramas."
 target="_blank">
 <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg">
 </a>
@@ -339,7 +364,7 @@ target="_blank">
   <footer class="site-footer">
   <div class="footer-social">
     <a href="https://instagram.com/diecast.scape" target="_blank">Instagram</a>
-    <a href="https://wa.me/917348913798" target="_blank">WhatsApp</a>
+    <a href="https://wa.me/918792744018" target="_blank">WhatsApp</a>
   </div>
 
   <div class="footer-grid">
@@ -353,9 +378,7 @@ target="_blank">
     <div>
       <h4>INFORMATION</h4>
       <p>About Us</p>
-      <p>Contact Us</p>
       <p>FAQ</p>
-      <p>Order via WhatsApp</p>
     </div>
   </div>
 
