Revise footer links and adjust brand name styles
Updated footer links for policies and added 'About Us' link.

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@ body {
 }
 
 .brand-name {
-  font-size: 22px;
+  font-size: 24px;
   font-weight: 800;
   letter-spacing: 1px;
-  margin-bottom: 8px;
+  margin-bottom: 1px;
 }
 
 .subtitle {
@@ -370,17 +370,13 @@ target="_blank">
   <div class="footer-grid">
     <div>
       <h4>POLICIES</h4>
-      <p>Privacy Policy</p>
-      <p>Shipping Policy</p>
-      <p>Return & Cancellation</p>
-      <p>Terms of Service</p>
+      <p><a href="privacy.html">Privacy Policy</a></p>
+      <p><a href="shipping.html">Shipping Policy</a></p>
+      <p><a href="return.html">Return & Cancellation</a></p>
+      <p><a href="terms.html">Terms of Service</a></p>
+      <br><br>
+      <p><a href="about.html">About Us</a></p>
     </div>
-    <div>
-      <h4>INFORMATION</h4>
-      <p>About Us</p>
-      <p>FAQ</p>
-    </div>
-  </div>
 
   <div class="footer-copy">
     © 2026 Diecast.scape —  Handcrafted Dioramas<br>
