Add footer link styles
Added CSS styles for footer links to reset their appearance.

--- a/index.html
+++ b/index.html
@@ -217,6 +217,15 @@ body {
   color: #777;
 }
 
+  /* Footer link reset */
+.site-footer a,
+.site-footer a:visited,
+.site-footer a:hover,
+.site-footer a:active {
+  color: #CBCCCD;      /* same as normal text */
+  text-decoration: none;
+}
+
 </style>
 </head>
 <script>
