--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body {
 
 .brand-name {
   font-size: 24px;
-  font-weight: 800;
+  font-weight: 600;
   letter-spacing: 1px;
   margin-bottom: 1px;
 }
@@ -379,15 +379,18 @@ target="_blank">
   <div class="footer-grid">
     <div>
       <h4>POLICIES</h4>
+      <p><a href="about.html">About Us</a></p>
       <p><a href="privacy.html">Privacy Policy</a></p>
       <p><a href="shipping.html">Shipping Policy</a></p>
       <p><a href="return.html">Return & Cancellation</a></p>
       <p><a href="terms.html">Terms of Service</a></p>
-      <br><br>
-      <p><a href="about.html">About Us</a></p>
     </div>
 
   <div class="footer-copy">
+    <p style="font-size:11px;color:#777;line-height:1.5;">
+This is a small independent business. Policies are subject to change without prior notice.
+</p>
+
     © 2026 Diecast.scape —  Handcrafted Dioramas<br>
 All brand names belong to their respective owners.<br><br>
 Thank you for visiting 
