Change footer heading and update policy text
Updated footer section with new heading and modified text.

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ target="_blank">
 
   <div class="footer-grid">
     <div>
-      <h4>POLICIES</h4>
+      <h4>Things to Know</h4>
       <p><a href="about.html">About Us</a></p>
       <p><a href="privacy.html">Privacy Policy</a></p>
       <p><a href="shipping.html">Shipping Policy</a></p>
@@ -387,8 +387,9 @@ target="_blank">
     </div>
 
   <div class="footer-copy">
-    <p style="font-size:11px;color:#777;line-height:1.5;">
-This is a small independent business. Policies are subject to change without prior notice.
+    
+    <p style="font-size:12px;color:#777;line-height:1.5;">
+This is a small independent business. Policies and information are subject to change without prior notice.
 </p>
 
     © 2026 Diecast.scape —  Handcrafted Dioramas<br>
