--- a/return.html
+++ b/return.html
@@ -50,7 +50,7 @@ a{
 <p>If you receive a damaged product, please contact us within 24 hours with images for assistance.</p>
 
 <p>Each case is reviewed individually to ensure fairness.</p>
-<p><a href="index.html">← Back to Home</a></p>
+<p><a href="index.html">← Back to Hom</a></p>
 </div>
 </body>
 </html>
