Add footer to privacy policy page
Added footer section with copyright and business information.

--- a/privacy.html
+++ b/privacy.html
@@ -35,6 +35,13 @@ a{
   color:#5BC0BE;
   text-decoration:none;
 }
+  .footer-copy {
+  text-align: center;
+  font-size: 14px;
+  margin-top: 25px;
+  color: #777;
+  }
+  
 </style>
 </head>
 <body>
@@ -51,6 +58,18 @@ a{
 <p>By using our website or contacting us via WhatsApp or Instagram, you agree to this privacy policy.</p>
 <p><a href="index.html">← Back to Home</a></p>
 </div>
+
+  <footer class="footer-copy">
+    
+    <p style="font-size:12px;color:#777;line-height:1.5;">
+This is a small independent business. Policies and information are subject to change without prior notice.
+</p>
+
+    © 2026 Diecast.scape —  Handcrafted Dioramas<br>
+All brand names belong to their respective owners.<br><br>
+Thank you for visiting 
+  </div>
+</footer>
 </body>
 </html>
 
