--- a/index.html
+++ b/index.html
@@ -5,228 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>DIECAST.SCAPE</title>
 
-<style>
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  background: #0B132B;
-  color: #fff;
-}
-
-  .top-header {
-  display: flex;
-  align-items: center;
-  padding: 12px 16px;
-  position: relative;
-}
-
-.logo {
-  width: 90px;
-  height: 90px;
-  object-fit: contain;
-}
-
-.brand-center {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  text-align: center;
-}
-
-.brand-name {
-  font-size: 24px;
-  font-weight: 600;
-  letter-spacing: 1px;
-  margin-bottom: 1px;
-}
-
-.subtitle {
-  text-align: center;
-  font-size: 14px;
-  color: #E8ECEE;
-}
-
-.description {
-  text-align: center;
-  font-size: 15px;
-  color: #CBCCCD;
-  padding: 10px 18px 20px;
-  line-height: 1.5;
-}
-
-  .search-bar {
-  width: 100%;
-  max-width: 1000px;
-  display: block;
-  margin: 10px auto 20px;
-  padding: 12px 14px;
-  border-radius: 10px;
-  border: none;
-  font-size: 14px;
-  outline: none;
-  box-sizing: border-box;
-}
-
-.section {
-  text-align: left;
-  padding: 22px 16px;
-  border-top: 1px solid #999;
-}
-
-.diorama-title {
-  font-size: 18px;
-  color: #fff;
-  margin-bottom: 10px;
-}
-
-.slider {
-  display: flex;
-  gap: 10px;
-  overflow-x: auto;
-  scroll-snap-type: x mandatory;
-}
-
-.slider img {
-  width: 250px;
-  aspect-ratio: 1 / 1;
-  object-fit: cover;
-  border-radius: 12px;
-  scroll-snap-align: start;
-  background: #000;
-}
-
-.price {
-  margin-top: 14px;
-}
-
-.old {
-  color: #A73F35;
-  text-decoration: line-through;
-  margin-right: 6px;
-}
-
-.new {
-  color: #E8ECEE;
-  font-size: 20px;
-  font-weight: bold;
-}
-
-.discount {
-  font-size: 13px;
-  color: #B7FFAD;
-  margin-top: 4px;
-}
-
-.ship {
-  font-size: 12px;
-  color: #aaa;
-}
-
-.buy-btn {
-  margin-top: 18px;
-  display: inline-block;
-  background: #5BC0BE;
-  color: #fff;
-  padding: 8px 18px;
-  border-radius: 8px;
-  text-decoration: none;
-  font-weight: 600;
-}
-
-.wa-float {
-  position: fixed;
-  bottom: 55px;
-  right: 22px;
-  width: 56px;
-  height: 56px;
-  background: #25D366;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 0 6px 18px rgba(0,0,0,0.4);
-  z-index: 999;
-}
-
-.wa-float img {
-  width: 28px;
-  height: 28px;
-}
-
-#lightbox {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0,0,0,0.9);
-  display: none;
-  align-items: center;
-  justify-content: center;
-  z-index: 999;
-}
-
-#lightbox img {
-  max-width: 95%;
-  max-height: 95%;
-  border-radius: 12px;
-}
-
-  .site-footer {
-  background: #0B132B;
-  border-top: 1px solid #999;
-  padding: 30px 16px;
-  color: #A6ABB0;
-}
-
-.footer-social {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.footer-social a {
-  margin: 0 10px;
-  color: #5BC0BE;
-  text-decoration: none;
-  font-weight: 600;
-}
-
-.footer-grid {
-  display: flex;
-  flex-direction: column;  
-  align-items: center;      
-  gap: 25px;
-}
-
-
-.footer-grid h4 {
-  color: #fff;
-  font-size: 17px;
-  margin-bottom: 8px;
-}
-
-.footer-grid p {
-  font-size: 15px;
-  margin: 6px 0;
-}
-
-.footer-copy {
-  text-align: center;
-  font-size: 14px;
-  margin-top: 25px;
-  color: #777;
-}
-
-  /* Footer link reset */
-.site-footer a,
-.site-footer a:visited,
-.site-footer a:hover,
-.site-footer a:active {
-  color: #CBCCCD;      /* same as normal text */
-  text-decoration: none;
-}
-
-</style>
+<link rel="stylesheet" href="style.css">
+  
 </head>
 <script>
 
