Remove inline styles and link external stylesheet
Removed inline styles from privacy.html and linked to an external stylesheet.

--- a/privacy.html
+++ b/privacy.html
@@ -5,44 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Diecast.scape</title>
 
-<style>
-body{
-  margin:0;
-  font-family:Arial, sans-serif;
-  background:#0B132B;
-  color:#E8ECEE;
-}
+<link rel="stylesheet" href="style.css">
 
-.page{
-  max-width:800px;
-  margin:0 auto;
-  padding:30px 18px;
-}
-
-h1{
-  font-size:22px;
-  margin-bottom:16px;
-}
-
-p{
-  font-size:14px;
-  line-height:1.6;
-  color:#CBCCCD;
-  margin-bottom:14px;
-}
-
-a{
-  color:#5BC0BE;
-  text-decoration:none;
-}
-  .footer-copy {
-  text-align: center;
-  font-size: 14px;
-  margin-top: 25px;
-  color: #777;
-  }
-  
-</style>
 </head>
 <body>
 
