--- a/shipping.html
+++ b/shipping.html
@@ -3,57 +3,54 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Diecast.scape</title>
+<title>Shipping Policy | Diecast.scape</title>
 
-<style>
-body{
-  margin:0;
-  font-family:Arial, sans-serif;
-  background:#0B132B;
-  color:#E8ECEE;
-}
-
-.page{
-  max-width:800px;
-  margin:0 auto;
-  padding:30px 18px;
-}
-
-h1{
-  font-size:22px;
-  margin-bottom:16px;
-}
-
-p{
-  font-size:14px;
-  line-height:1.6;
-  color:#CBCCCD;
-  margin-bottom:14px;
-}
-
-a{
-  color:#5BC0BE;
-  text-decoration:none;
-}
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<!-- HEADER -->
+<header class="top-header">
+  <img src="logo.png" class="logo" alt="Diecast Scape Logo">
+
+  <div class="brand-center">
+    <div class="brand-name">DIECAST.SCAPE</div>
+  </div>
+</header>
+
+<!-- SECTION LINE -->
+<div class="section"></div>
+
+<!-- PAGE CONTENT -->
 <div class="page">
 
 <h1>Shipping Policy</h1>
 
-<p>All Diecast.scape dioramas are handcrafted and shipped with care.</p>
+<p>All Diecast.scape dioramas are handcrafted and packed with utmost care.</p>
 
-<p>Orders are typically processed within 2–4 working days.</p>
+<p>Orders are typically processed within 2–4 working days after confirmation.</p>
 
-<p>Shipping charges are calculated separately and communicated before order confirmation.</p>
+<p>Shipping charges are calculated separately and shared before order confirmation.</p>
 
-<p>Delivery timelines may vary based on your location and courier service availability.</p>
+<p>Delivery timelines may vary depending on location and courier availability.</p>
 
 <p>Once shipped, tracking details will be shared via WhatsApp.</p>
-  
+
 <p><a href="index.html">← Back to Home</a></p>
+
 </div>
+
+<!-- FOOTER -->
+<footer class="site-footer">
+  <div class="footer-copy">
+    <p style="font-size:12px;line-height:1.5;">
+      This is a small independent business. Policies and information are subject to change without prior notice.
+    </p>
+
+    © 2026 Diecast.scape — Handcrafted Dioramas<br>
+    All brand names belong to their respective owners.
+  </div>
+</footer>
+
 </body>
 </html>
