--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ This is a small independent business. Policies and information are subject to ch
 
     © 2026 Diecast.scape —  Handcrafted Dioramas<br>
 All brand names belong to their respective owners.<br><br>
-Thank you for visiting 
+Thank you for visiting. 
   </div>
 </footer>
 
