--- a/index.html
+++ b/index.html
@@ -46,11 +46,10 @@ window.addEventListener("popstate", function () {
 
 <body>
   
-<header class="top-header">
-  <img src="logo.png" class="logo" alt="Diecast Scape Logo">
-
-  <div class="brand-center">
-    <div class="brand-name">DIECAST.SCAPE</div>
+<header class="site-header">
+  <div class="header-inner">
+    <img src="logo.png" class="header-logo" alt="Diecast Scape Logo">
+    <div class="header-title">DIECAST.SCAPE</div>
   </div>
 </header>
 
