--- a/index.html
+++ b/index.html
@@ -167,10 +167,7 @@ target="_blank">
 
   <div class="footer-copy">
     
-    <p style="font-size:12px;color:#777;line-height:1.5;">
-This is a small independent business. Policies and information are subject to change without prior notice.
-</p>
-
+This is a small independent business. Policies and information are subject to change without prior notice.<br><br>
     © 2026 Diecast.scape —  Handcrafted Dioramas<br>
 All brand names belong to their respective owners.<br><br>
 Thank you for visiting. 
