--- a/shipping.html
+++ b/shipping.html
@@ -10,11 +10,10 @@
 <body>
 
 <!-- HEADER -->
-<header class="top-header">
-  <img src="logo.png" class="logo" alt="Diecast Scape Logo">
-
-  <div class="brand-center">
-    <div class="brand-name">DIECAST.SCAPE</div>
+<header class="site-header">
+  <div class="header-inner">
+    <img src="logo.png" class="header-logo" alt="Diecast Scape Logo">
+    <div class="header-title">DIECAST.SCAPE</div>
   </div>
 </header>
 
@@ -43,12 +42,11 @@
 <!-- FOOTER -->
 <footer class="site-footer">
   <div class="footer-copy">
-    <p style="font-size:12px;line-height:1.5;">
-      This is a small independent business. Policies and information are subject to change without prior notice.
-    </p>
-
-    © 2026 Diecast.scape — Handcrafted Dioramas<br>
-    All brand names belong to their respective owners.
+    
+This is a small independent business. Policies and information are subject to change without prior notice.<br><br>
+    © 2026 Diecast.scape —  Handcrafted Dioramas<br>
+All brand names belong to their respective owners.<br><br>
+Thank you for visiting. 
   </div>
 </footer>
 
