--- a/privacy.html
+++ b/privacy.html
@@ -3,14 +3,24 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Diecast.scape</title>
+<title>Shipping Policy | Diecast.scape</title>
 
 <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
 
+<!-- HEADER -->
+<header class="site-header">
+  <div class="header-inner">
+    <img src="logo.png" class="header-logo" alt="Diecast Scape Logo">
+    <div class="header-title">DIECAST.SCAPE</div>
+  </div>
+</header>
+
+
+<!-- PAGE CONTENT -->
 <div class="page">
+
 <h1>Privacy Policy</h1>
 
 <p>At Diecast.scape, your privacy is important to us. We collect only the necessary information required to process your orders and communicate with you.</p>
@@ -20,20 +30,19 @@
 <p>We do not sell, trade, or share your personal data with third parties.</p>
 
 <p>By using our website or contacting us via WhatsApp or Instagram, you agree to this privacy policy.</p>
-<p><a href="index.html">← Back to Home</a></p>
+
 </div>
 
-  <footer class="footer-copy">
+<!-- FOOTER -->
+<footer class="site-footer">
+  <div class="footer-copy">
     
-    <p style="font-size:12px;color:#777;line-height:1.5;">
-This is a small independent business. Policies and information are subject to change without prior notice.
-</p>
-
+This is a small independent business. Policies and information are subject to change without prior notice.<br><br>
     © 2026 Diecast.scape —  Handcrafted Dioramas<br>
 All brand names belong to their respective owners.<br><br>
-Thank you for visiting 
+Thank you for visiting. 
   </div>
 </footer>
+
 </body>
 </html>
-
