--- a/terms.html
+++ b/terms.html
@@ -3,44 +3,23 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Diecast.scape</title>
+<title>Shipping Policy | Diecast.scape</title>
 
-<style>
-body{
-  margin:0;
-  font-family:Arial, sans-serif;
-  background:#0B132B;
-  color:#E8ECEE;
-}
-
-.page{
-  max-width:800px;
-  margin:0 auto;
-  padding:30px 18px;
-}
-
-h1{
-  font-size:22px;
-  margin-bottom:16px;
-}
-
-p{
-  font-size:14px;
-  line-height:1.6;
-  color:#CBCCCD;
-  margin-bottom:14px;
-}
-
-a{
-  color:#5BC0BE;
-  text-decoration:none;
-}
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div class="page">
+<!-- HEADER -->
+<header class="site-header">
+  <div class="header-inner">
+    <img src="logo.png" class="header-logo" alt="Diecast Scape Logo">
+    <div class="header-title">DIECAST.SCAPE</div>
+  </div>
+</header>
 
+
+<!-- PAGE CONTENT -->
+<div class="page">
 <h1>Terms of Service</h1>
 
 <p>By placing an order with Diecast.scape, you agree to the following terms.</p>
@@ -49,8 +28,20 @@ a{
 
 <p>Prices, availability, and offers are subject to change without prior notice.</p>
 
-<p>Diecast.scape is not responsible for delays caused by courier services.</p>
 <p><a href="index.html">← Back to Home</a></p>
+
 </div>
+
+<!-- FOOTER -->
+<footer class="site-footer">
+  <div class="footer-copy">
+    
+This is a small independent business. Policies and information are subject to change without prior notice.<br><br>
+    © 2026 Diecast.scape —  Handcrafted Dioramas<br>
+All brand names belong to their respective owners.<br><br>
+Thank you for visiting. 
+  </div>
+</footer>
+
 </body>
 </html>
