--- a/index.html
+++ b/index.html
@@ -63,15 +63,18 @@ Built with premium materials, realistic details, and precise scale accuracy.
   onkeyup="searchProducts()"
   class="search-bar">
 
-  <!-- PRODUCT 1 -->
 <div class="section">
   <div class="diorama-title">NISSAN Handcrafted Diorama</div>
 
   <div class="slider">
-    <img src="image1.jpg" onclick="openLightbox(this.src)">
-    <img src="image2.jpg" onclick="openLightbox(this.src)">
-    <img src="image3.jpg" onclick="openLightbox(this.src)">
-    <img src="image4.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/image8.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/image9.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/image10.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/image11.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/image12.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/image13.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/image14.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/image15.jpg" onclick="openLightbox(this.src)">
   </div>
 
   <div class="price">
@@ -94,10 +97,14 @@ Built with premium materials, realistic details, and precise scale accuracy.
   <div class="diorama-title">BMW Handcrafted Diorama</div>
 
   <div class="slider">
-    <img src="image1.jpg" onclick="openLightbox(this.src)">
-    <img src="image2.jpg" onclick="openLightbox(this.src)">
-    <img src="image3.jpg" onclick="openLightbox(this.src)">
-    <img src="image4.jpg" onclick="openLightbox(this.src)">
+  
+    <img src="images/products/image1.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/image2.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/image3.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/image4.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/image5.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/image6.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/image7.jpg" onclick="openLightbox(this.src)">
   </div>
 
   <div class="price">
@@ -115,30 +122,7 @@ Built with premium materials, realistic details, and precise scale accuracy.
   </a>
 </div>
 
-  <div class="section">
-  <div class="diorama-title">BMW Handcrafted Diorama</div>
 
-  <div class="slider">
-    <img src="image1.jpg" onclick="openLightbox(this.src)">
-    <img src="image2.jpg" onclick="openLightbox(this.src)">
-    <img src="image3.jpg" onclick="openLightbox(this.src)">
-    <img src="image4.jpg" onclick="openLightbox(this.src)">
-  </div>
-
-  <div class="price">
-    <span class="old">₹1199</span>
-    <span class="new">₹849</span>
-  </div>
-
-  <div class="discount">29% OFF · Save ₹350</div>
-  <div class="ship">+ Shipping charges applicable</div>
-
-  <a class="buy-btn"
-     href="https://wa.me/918792744018?text=Hi%20Diecast.scape%2C%0AI%20would%20like%20to%20place%20an%20order%20for%20the%20BMW%20Handcrafted%20Diorama%2C%20priced%20at%20%E2%82%B9849%20(29%25%20discount).%0AKindly%20let%20me%20know%20the%20delivery%20options%20and%20payment%20details."
-     target="_blank">
-     Order on WhatsApp
-  </a>
-  </div>
 
 <a class="wa-float"
 href="https://wa.me/918792744018?text=Hi%20I%20need%20help%20regarding%20Diecast.scape%20dioramas."
