--- a/return.html
+++ b/return.html
@@ -20,14 +20,20 @@
 
 <!-- PAGE CONTENT -->
 <div class="page">
+  <h1>Return & Cancellation Policy</h1>
+
+<p>As our products are handcrafted and made in limited quantities, we do not offer returns once an order is confirmed.</p>
+
+<p>Cancellations are accepted only before the product is shipped.</p>
   
-<h1>Terms of Service</h1>
+<p>To be eligible for any damage-related assistance, a complete unboxing video recorded from start to end without any cuts is mandatory.</p>
 
-<p>By placing an order with Diecast.scape, you agree to the following terms.</p>
+<p>If you receive a damaged product, please contact us within 24 hours of delivery along with clear images and the required unboxing video.</p>
 
-<p>All product images are for representation purposes. Minor variations may occur due to handcrafted nature.</p>
+<p>Refund or replacement, if applicable, will be determined only after review and mutual discussion based on the provided evidence.</p>
 
-<p>Prices, availability, and offers are subject to change without prior notice.</p>
+<p>Each case is reviewed individually to ensure fairness.</p>
+
 
 <p><a href="index.html">← Back to Home</a></p>
 
