--- a/shipping.html
+++ b/shipping.html
@@ -20,18 +20,18 @@
 
 <!-- PAGE CONTENT -->
 <div class="page">
-
 <h1>Shipping Policy</h1>
 
-<p>All Diecast.scape dioramas are handcrafted and packed with utmost care.</p>
+<p>All Diecast.scape dioramas are handcraft and securely packed using protective bubble wrap before shipping.</p>
 
-<p>Orders are typically processed within 2–4 working days after confirmation.</p>
+<p>Orders are typically processed within 2–4 working days.</p>
 
-<p>Shipping charges are calculated separately and shared before order confirmation.</p>
+<p>Shipping charges are calculated separately and communicated before order confirmation.</p>
 
-<p>Delivery timelines may vary depending on location and courier availability.</p>
+<p>Delivery timelines may vary based on your location and courier service availability.</p>
 
 <p>Once shipped, tracking details will be shared via WhatsApp.</p>
+
 
 <p><a href="index.html">← Back to Home</a></p>
 
