--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@ Built with premium materials, realistic details, and precise scale accuracy.
   <div class="diorama-title">NISSAN Handcrafted Diorama</div>
 
   <div class="slider">
-    <img src="images/products/image8.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/image9.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/image10.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/image11.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/image12.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/image13.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/image14.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/image15.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image8.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image9.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image10.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image11.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image12.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image13.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image14.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image15.jpg" onclick="openLightbox(this.src)">
   </div>
 
   <div class="price">
@@ -98,13 +98,13 @@ Built with premium materials, realistic details, and precise scale accuracy.
 
   <div class="slider">
   
-    <img src="images/products/image1.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/image2.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/image3.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/image4.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/image5.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/image6.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/image7.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image1.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image2.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image3.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image4.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image5.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image6.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image7.jpg" onclick="openLightbox(this.src)">
   </div>
 
   <div class="price">
