--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@ Built with premium materials, realistic details, and precise scale accuracy.
   onkeyup="searchProducts()"
   class="search-bar">
 
+  <div class="coming-soon">
+  Built in Scale. <span>Coming Soon</span>
+</div>
+
 <div class="section">
   <div class="diorama-title">NISSAN Handcrafted Diorama</div>
 
