--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@ target="_blank">
   
   <footer class="site-footer">
   <div class="footer-social">
-    <a1 href="https://instagram.com/diecast.scape" target="_blank">Instagram</a1>
-    <a1 href="https://wa.me/918792744018" target="_blank">WhatsApp</a1>
+    <a href="https://instagram.com/diecast.scape" target="_blank">Instagram</a>
+    <a href="https://wa.me/918792744018" target="_blank">WhatsApp</a>
   </div>
 
   <div class="footer-grid">
