--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@ Built with premium materials, realistic details, and precise scale accuracy.
     <img src="images/products/Image1.jpg" onclick="openLightbox(this.src)">
     <img src="images/products/Image2.jpg" onclick="openLightbox(this.src)">
     <img src="images/products/Image3.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image4.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/image4.jpg" onclick="openLightbox(this.src)">
     <img src="images/products/Image5.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image6.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/image6.jpg" onclick="openLightbox(this.src)">
     <img src="images/products/Image7.jpg" onclick="openLightbox(this.src)">
   </div>
 
